2011-06-28  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/ReconServer.pm: Moved add_address function 
	to DB to common uses and create add_new_address_agent function
	into DB library with repeated code for the same 

2011-06-27  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/NetworkServer.pm: Fixed SNMP PROC modules always
	return critical state.

2011-06-23  Koichiro Kikuchi  <koichiro@rworks.jp>

	* lib/PandoraFMS/Tools.pm: Checked if pandora_server is already
	  running, in order to prevent multiple instances with same PID
	  file from running. And made PID file permissions 644, rather
	  than 666. 

	* bin/pandora_server: Remove PID file on shutdown.

	* FreeBSD/pandora_server: Use -P option for PID file instead of
	  pgrep.

2011-06-22  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm: Added a new SNMP server (enterprise).

	* lib/PandoraFMS/NetworkServer.pm: Small fixes.

2011-06-21  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DataServer.pm: Fixed numeric condition in a string
	comparation

2011-06-21  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Added blank space in a couple of
	queries to avoid errors when the enterprise is not installed

2011-06-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm,,
	  lib/PandoraFMS/NetworkServer.pm: Added a new ICMP server (enterprise).

	* lib/PandoraFMS/Core.pm: Reset action thresholds when an alert
	  recovers.

2011-06-20  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm: Added quotes to process
	database functions to avoid errors when the tables
	will have key words names

	* lib/PandoraFMS/Core.pm: Fixed a bug change the position
	of two conditions to avoid a notice

2011-06-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed a typo.

2011-06-15  Koichiro Kikuchi  <koichiro@rworks.jp>

	* lib/PandoraFMS/Tools.pm: Added FreeBSD specific code to load_average()